...
                handleDeeplink(url)
            }
            .sheet(isPresented: $showDeeplinkSimulationSheet) {
                DeeplinkSimulationSheet(options: [
                    DeeplinkOption(label: "Main View", url: URL(string: "skjline://main")),
                    DeeplinkOption(label: "Session View (Random)", url: URL(string: "skjline://session?mock=true")),
                    DeeplinkOption(label: "Session (3-Min Demo)", url: URL(string: "skjline://session/trainer/training/beginner/training-3min.mrc?mock=true"))
                ]) { option in
                    if let url = option.url {
                        handleDeeplink(url)
                    }
                }
            }
...
