...
    private var mainContent: some View {
        GeometryReader { geometry in
            VStack(spacing: 15) {
                WeeklyCalendarView()
                    .padding(.bottom, 5)
                RandomSessionButtonView(viewModel: randomSessionViewModel, workoutSelectionViewModel: workoutSelectionViewModel)
                libraryButton(geometry: geometry)
                Spacer()
            }
            .padding(.horizontal)
        }
    }

...
