...
                                .padding()
                                .background(viewModel.canStartTraining ? Color.green : Color.gray)
                                .cornerRadius(12)
                        }
                        .padding(.horizontal)
                        .disabled(!viewModel.canStartTraining)
                        .accessibilityIdentifier("startTrainingButton")
                    }
                    
                    if viewModel.sensors.count > 0 && !viewModel.isScanning {
                        Button(action: {
                            viewModel.startScanning()
                        }) {
...
                                .font(.subheadline)
                        }
                        .padding(.bottom, 5)
                    }
                }
            }
            .navigationTitle("Select Sensor")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    HStack {
                        if viewModel.isScanning {
                            ProgressView()
...
