...
            .foregroundColor(.white)
            .padding(.vertical, 8)
            .padding(.horizontal, 16)
            .background(Color.blue)
            .cornerRadius(20)
        }
        .accessibilityIdentifier("startSessionButton")
    }
}

